sshct.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: sshct
  labels:
    app: sshct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sshct
  template:
    metadata:
      labels:
        app: sshct
    spec:
      hostname: sshct
      volumes:
      - name: home
        hostPath:
          path: /data/home
          type:
      #- name: gorilychrume
      #  hostPath:
      #    path: /data/gorilych.ru/me
      #    type:
      containers:
      - name: sshct
        image: gorilych/sshct
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 22
          name: ssh
        volumeMounts:
        - mountPath: /home
          name: home
        #- mountPath: /home/www/me
        #  name: gorilychrume
---
kind: Service
apiVersion: v1
metadata:
  name: sshct
spec:
  selector:
    app: sshct
  ports:
  - name: ssh
    protocol: TCP
    port: 22
    targetPort: ssh
    nodePort: 30810
  type: NodePort
