gitea.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      volumes:
      - name: gitea
        persistentVolumeClaim:
          claimName: gitea
      containers:
      - name: gitea
        image: gitea/gitea
        ports:
        - containerPort: 3000
          name: http
        - containerPort: 22
          name: ssh
        volumeMounts:
          - mountPath: /data
            name: gitea
---
kind: Service
apiVersion: v1
metadata:
  name: gitea
spec:
  selector:
    app: gitea
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: gorilych-ru-tls
    hosts:
    - gorilych.ru
    - router.gorilych.ru
    - confluence.gorilych.ru
    - jira.gorilych.ru
    - git.gorilych.ru
    - seafile.gorilych.ru
  rules:
    - host: git.gorilych.ru
      http:
        paths:
        - backend:
            serviceName: gitea
            servicePort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: sshgitea
spec:
  selector:
    app: gitea
  ports:
  - name: ssh
    protocol: TCP
    port: 22
    targetPort: ssh
    nodePort: 31022
  type: NodePort
